# cmvideoediter

./: CMakeLists.txt  README.md  main.cpp  videoeditor.cpp  videoeditor.h
